<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary2"
            android:fillViewport="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <RelativeLayout
                android:id="@+id/headerView"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:orientation="vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:background="@color/colorPrimary1" />

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="16dp"
                    android:text="@string/app_name"
                    android:textColor="@android:color/white"
                    android:textSize="30sp"
                    android:textStyle="bold" />


                <androidx.cardview.widget.CardView
                    android:id="@+id/card_search"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/title"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="16dp"
                    app:cardBackgroundColor="@color/colorPrimaryDark1"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="0dp">

                    <androidx.appcompat.widget.SearchView
                        android:id="@+id/searchView"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:iconifiedByDefault="false"
                        app:queryHint="@string/find_recipe">

                        <requestFocus />

                    </androidx.appcompat.widget.SearchView>

                </androidx.cardview.widget.CardView>


                <TextView
                    android:id="@+id/titleCategory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/card_search"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="44dp"
                    android:layout_marginRight="16dp"
                    android:text="@string/food_category"
                    android:textColor="@color/colorPrimaryDark1"
                    android:textSize="19sp"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerCategory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/titleCategory"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="20dp"
                    android:scrollbars="none" />


                <TextView
                    android:id="@+id/tv_example"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/recyclerCategory"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:text="@string/all_food_recipe"
                    android:textColor="@color/colorPrimaryDark1"
                    android:textSize="19sp"
                    android:textStyle="bold" />

                <ProgressBar
                    android:id="@+id/shimmerFrameLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_example"
                    android:layout_centerHorizontal="true" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_food_dashboard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_example"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="20dp" />

            </RelativeLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>