<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.about.DeveloperDetail">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/civ_developer_photo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="12dp"
            android:src="@drawable/profil_tio" />

        <TextView
            android:id="@+id/tv_developer_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/colorPrimaryDark2"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_developer_nim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@android:color/black"
            android:textSize="16sp" />


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="8dp"
            android:padding="4dp"
            app:cardBackgroundColor="@color/colorPrimaryDark2"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:padding="2dp"
                    android:text="@string/social_media"
                    android:textColor="@android:color/white"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="8dp"
                        android:padding="4dp"
                        android:src="@drawable/icon_github" />

                    <TextView
                        android:id="@+id/tv_developer_github"
                        style="@style/desc_text_developer"
                        android:layout_gravity="center_vertical"
                        android:layout_marginBottom="4dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="8dp"
                        android:padding="4dp"
                        android:src="@drawable/icon_instagram" />

                    <TextView
                        android:id="@+id/tv_developer_ig"
                        style="@style/desc_text_developer"
                        android:layout_gravity="center_vertical"
                        android:layout_marginBottom="4dp" />

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="32dp"
            android:padding="4dp"
            app:cardBackgroundColor="@color/colorPrimaryDark2"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="4dp">

                <TextView
                    style="@style/title_text_developer"
                    android:text="@string/address" />

                <TextView
                    android:id="@+id/tv_developer_address"
                    style="@style/desc_text_developer"
                    android:layout_marginStart="8dp" />

                <TextView
                    style="@style/title_text_developer"
                    android:layout_marginTop="16dp"
                    android:text="@string/hobby" />

                <TextView
                    android:id="@+id/tv_developer_hobby"
                    style="@style/desc_text_developer"
                    android:layout_marginStart="8dp" />

                <TextView
                    style="@style/title_text_developer"
                    android:layout_marginTop="16dp"
                    android:text="@string/quotes" />

                <TextView
                    android:id="@+id/tv_developer_quotes"
                    style="@style/desc_text_developer"
                    android:layout_marginStart="8dp" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>